--- a/public/m/index.html
+++ b/public/m/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
@@ -11,14 +12,17 @@
 	<script src="assets/zepto/zepto.min.js"></script>
 	<script src="assets/mui/js/mui.js"></script>
 	<!-- <script src="assets/mui/js/mui.min.js"></script> -->
-	<script src="js/common.js"></script>
+	<script src="js/public.js"></script>
 </head>
-<body>
 
+<body>
+	<!-- header -->
 	<header class="mui-bar mui-bar-nav header">
 		<h1 class="mui-title">乐淘云购</h1>
 		<a href="search.html" class="mui-icon mui-icon-search mui-pull-right"></a>
 	</header>
+
+	<!-- footer -->
 	<nav class="mui-bar mui-bar-tab footer">
 		<a class="mui-tab-item mui-active" href="index.html">
 			<span class="mui-icon mui-icon-home"></span>
@@ -37,273 +41,331 @@
 			<span class="mui-tab-label">会员中心</span>
 		</a>
 	</nav>
+
 	<div class="mui-scroll-wrapper">
 		<div class="mui-scroll">
-			<!-- 轮播图 -->
+			<!-- banner -->
 			<div class="mui-slider">
 				<div class="mui-slider-group mui-slider-loop">
-					<div class="mui-slider-item">
-						<a href="#"><img src="images/banner6.png" /></a>
+					<!--支持循环，需要重复图片节点-->
+					<div class="mui-slider-item mui-slider-item-duplicate">
+						<a href="#">
+							<img src="./images/banner6.png" />
+						</a>
 					</div>
 					<div class="mui-slider-item">
-						<a href="#"><img src="images/banner1.png" /></a>
+						<a href="#">
+							<img src="./images/banner1.png" />
+						</a>
 					</div>
 					<div class="mui-slider-item">
-						<a href="#"><img src="images/banner2.png" /></a>
+						<a href="#">
+							<img src="./images/banner2.png" />
+						</a>
 					</div>
 					<div class="mui-slider-item">
-						<a href="#"><img src="images/banner3.png" /></a>
+						<a href="#">
+							<img src="./images/banner3.png" />
+						</a>
 					</div>
 					<div class="mui-slider-item">
-						<a href="#"><img src="images/banner4.png" /></a>
+						<a href="#">
+							<img src="./images/banner4.png" />
+						</a>
 					</div>
 					<div class="mui-slider-item">
-						<a href="#"><img src="images/banner5.png" /></a>
+						<a href="#">
+							<img src="./images/banner5.png" />
+						</a>
 					</div>
 					<div class="mui-slider-item">
-						<a href="#"><img src="images/banner6.png" /></a>
+						<a href="#">
+							<img src="./images/banner6.png" />
+						</a>
 					</div>
-					<div class="mui-slider-item">
-						<a href="#"><img src="images/banner1.png" /></a>
+					<!--支持循环，需要重复图片节点-->
+					<div class="mui-slider-item mui-slider-item-duplicate">
+						<a href="#">
+							<img src="./images/banner1.png" />
+						</a>
 					</div>
 				</div>
 				<div class="mui-slider-indicator indicator">
-				    <div class="mui-indicator mui-active"></div>
-				    <div class="mui-indicator"></div>
-				    <div class="mui-indicator"></div>
-				    <div class="mui-indicator"></div>
-				    <div class="mui-indicator"></div>
-				    <div class="mui-indicator"></div>
+					<div class="mui-indicator"></div>
+					<div class="mui-indicator mui-active"></div>
+					<div class="mui-indicator"></div>
+					<div class="mui-indicator"></div>
+					<div class="mui-indicator"></div>
+					<div class="mui-indicator"></div>
 				</div>
+
+
 			</div>
+
 			<!-- 导航链接 -->
 			<div class="nav-link mui-clearfix">
-				<a href="#"><img src="images/nav1.png"></a>
-				<a href="#"><img src="images/nav2.png"></a>
-				<a href="#"><img src="images/nav3.png"></a>
-				<a href="#"><img src="images/nav4.png"></a>
-				<a href="#"><img src="images/nav5.png"></a>
-				<a href="#"><img src="images/nav6.png"></a>
+				<a href="#">
+					<img src="./images/nav1.png" alt="">
+				</a>
+				<a href="#">
+					<img src="./images/nav2.png" alt="">
+				</a>
+				<a href="#">
+					<img src="./images/nav3.png" alt="">
+				</a>
+				<a href="#">
+					<img src="./images/nav4.png" alt="">
+				</a>
+				<a href="#">
+					<img src="./images/nav5.png" alt="">
+				</a>
+				<a href="#">
+					<img src="./images/nav6.png" alt="">
+				</a>
 			</div>
+
 			<!-- 品牌专区 -->
 			<div class="brand">
-				<img src="images/title0.png" class="title">
-				<ul class="list mui-clearfix">
+
+				<img src="./images/title0.png" alt="">
+				<ul class="mui-clearfix">
 					<li>
 						<a href="#">
-							<img src="images/brand1.png">
+							<img src="./images/brand1.png" alt="">
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="images/brand2.png">
+							<img src="./images/brand2.png" alt="">
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="images/brand3.png">
+							<img src="./images/brand3.png" alt="">
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="images/brand4.png">
+							<img src="./images/brand4.png" alt="">
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="images/brand5.png">
+							<img src="./images/brand5.png" alt="">
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="images/brand6.png">
+							<img src="./images/brand6.png" alt="">
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="images/brand7.png">
+							<img src="./images/brand7.png" alt="">
 						</a>
 					</li>
 					<li>
 						<a href="#">
-							<img src="images/brand8.png">
+							<img src="./images/brand8.png" alt="">
 						</a>
 					</li>
 				</ul>
+
 			</div>
+
 			<!-- 商品布局 -->
 			<div class="product">
-				<img src="images/title1.png" class="title">
-				<ul class="list mui-clearfix">
+				<a href="#">
+					<img src="./images/title1.png" alt="">
+				</a>
+				<ul>
 					<li>
 						<a href="#">
-							<img src="images/product.jpg">
+							<img src="./images/product.jpg" alt="">
 							<span class="name">
 								adidas阿迪达斯 男式 场下休闲篮球鞋S83700
 							</span>
 							<p>
-								<span>¥560.00</span>
-								<span>¥888.00</span>
+								<span>￥550.00</span>
+								<span>￥888.00</span>
 							</p>
 							<button class="buy-now">立即购买</button>
 						</a>
 					</li>
 					<li>
-						<a href="#">
-							<img src="images/product.jpg">
-							<span class="name">
-								adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-							</span>
-							<p>
-								<span>¥560.00</span>
-								<span>¥888.00</span>
-							</p>
-							<button class="buy-now">立即购买</button>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<img src="images/product.jpg">
-							<span class="name">
-								adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-							</span>
-							<p>
-								<span>¥560.00</span>
-								<span>¥888.00</span>
-							</p>
-							<button class="buy-now">立即购买</button>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<img src="images/product.jpg">
-							<span class="name">
-								adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-							</span>
-							<p>
-								<span>¥560.00</span>
-								<span>¥888.00</span>
-							</p>
-							<button class="buy-now">立即购买</button>
-						</a>
-					</li>
+							<a href="#">
+								<img src="./images/product.jpg" alt="">
+								<span class="name">
+									adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+								</span>
+								<p>
+									<span>￥550.00</span>
+									<span>￥888.00</span>
+								</p>
+								<button class="buy-now">立即购买</button>
+							</a>
+						</li>
+						<li>
+								<a href="#">
+									<img src="./images/product.jpg" alt="">
+									<span class="name">
+										adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+									</span>
+									<p>
+										<span>￥550.00</span>
+										<span>￥888.00</span>
+									</p>
+									<button class="buy-now">立即购买</button>
+								</a>
+							</li>
+							<li>
+									<a href="#">
+										<img src="./images/product.jpg" alt="">
+										<span class="name">
+											adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+										</span>
+										<p>
+											<span>￥550.00</span>
+											<span>￥888.00</span>
+										</p>
+										<button class="buy-now">立即购买</button>
+									</a>
+								</li>
 				</ul>
 			</div>
 			<div class="product">
-				<img src="images/title2.png" class="title">
-				<ul class="list mui-clearfix">
-					<li>
+					<a href="#">
+						<img src="./images/title2.png" alt="">
+					</a>
+					<ul>
+						<li>
+							<a href="#">
+								<img src="./images/product.jpg" alt="">
+								<span class="name">
+									adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+								</span>
+								<p>
+									<span>￥550.00</span>
+									<span>￥888.00</span>
+								</p>
+								<button class="buy-now">立即购买</button>
+							</a>
+						</li>
+						<li>
+								<a href="#">
+									<img src="./images/product.jpg" alt="">
+									<span class="name">
+										adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+									</span>
+									<p>
+										<span>￥550.00</span>
+										<span>￥888.00</span>
+									</p>
+									<button class="buy-now">立即购买</button>
+								</a>
+							</li>
+							<li>
+									<a href="#">
+										<img src="./images/product.jpg" alt="">
+										<span class="name">
+											adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+										</span>
+										<p>
+											<span>￥550.00</span>
+											<span>￥888.00</span>
+										</p>
+										<button class="buy-now">立即购买</button>
+									</a>
+								</li>
+								<li>
+										<a href="#">
+											<img src="./images/product.jpg" alt="">
+											<span class="name">
+												adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+											</span>
+											<p>
+												<span>￥550.00</span>
+												<span>￥888.00</span>
+											</p>
+											<button class="buy-now">立即购买</button>
+										</a>
+									</li>
+					</ul>
+				</div>
+				<div class="product">
 						<a href="#">
-							<img src="images/product.jpg">
-							<span class="name">
-								adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-							</span>
-							<p>
-								<span>¥560.00</span>
-								<span>¥888.00</span>
-							</p>
-							<button class="buy-now">立即购买</button>
+							<img src="./images/title3.png" alt="">
 						</a>
-					</li>
-					<li>
-						<a href="#">
-							<img src="images/product.jpg">
-							<span class="name">
-								adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-							</span>
-							<p>
-								<span>¥560.00</span>
-								<span>¥888.00</span>
-							</p>
-							<button class="buy-now">立即购买</button>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<img src="images/product.jpg">
-							<span class="name">
-								adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-							</span>
-							<p>
-								<span>¥560.00</span>
-								<span>¥888.00</span>
-							</p>
-							<button class="buy-now">立即购买</button>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<img src="images/product.jpg">
-							<span class="name">
-								adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-							</span>
-							<p>
-								<span>¥560.00</span>
-								<span>¥888.00</span>
-							</p>
-							<button class="buy-now">立即购买</button>
-						</a>
-					</li>
-				</ul>
-			</div>
-			<div class="product">
-				<img src="images/title3.png" class="title">
-				<ul class="list mui-clearfix">
-					<li>
-						<a href="#">
-							<img src="images/product.jpg">
-							<span class="name">
-								adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-							</span>
-							<p>
-								<span>¥560.00</span>
-								<span>¥888.00</span>
-							</p>
-							<button class="buy-now">立即购买</button>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<img src="images/product.jpg">
-							<span class="name">
-								adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-							</span>
-							<p>
-								<span>¥560.00</span>
-								<span>¥888.00</span>
-							</p>
-							<button class="buy-now">立即购买</button>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<img src="images/product.jpg">
-							<span class="name">
-								adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-							</span>
-							<p>
-								<span>¥560.00</span>
-								<span>¥888.00</span>
-							</p>
-							<button class="buy-now">立即购买</button>
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							<img src="images/product.jpg">
-							<span class="name">
-								adidas阿迪达斯 男式 场下休闲篮球鞋S83700
-							</span>
-							<p>
-								<span>¥560.00</span>
-								<span>¥888.00</span>
-							</p>
-							<button class="buy-now">立即购买</button>
-						</a>
-					</li>
-				</ul>
-			</div>
+						<ul>
+							<li>
+								<a href="#">
+									<img src="./images/product.jpg" alt="">
+									<span class="name">
+										adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+									</span>
+									<p>
+										<span>￥550.00</span>
+										<span>￥888.00</span>
+									</p>
+									<button class="buy-now">立即购买</button>
+								</a>
+							</li>
+							<li>
+									<a href="#">
+										<img src="./images/product.jpg" alt="">
+										<span class="name">
+											adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+										</span>
+										<p>
+											<span>￥550.00</span>
+											<span>￥888.00</span>
+										</p>
+										<button class="buy-now">立即购买</button>
+									</a>
+								</li>
+								<li>
+										<a href="#">
+											<img src="./images/product.jpg" alt="">
+											<span class="name">
+												adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+											</span>
+											<p>
+												<span>￥550.00</span>
+												<span>￥888.00</span>
+											</p>
+											<button class="buy-now">立即购买</button>
+										</a>
+									</li>
+									<li>
+											<a href="#">
+												<img src="./images/product.jpg" alt="">
+												<span class="name">
+													adidas阿迪达斯 男式 场下休闲篮球鞋S83700
+												</span>
+												<p>
+													<span>￥550.00</span>
+													<span>￥888.00</span>
+												</p>
+												<button class="buy-now">立即购买</button>
+											</a>
+										</li>
+						</ul>
+					</div>
 		</div>
 	</div>
+
+
+	<script>
+		//获得slider插件对象
+		var gallery = mui('.mui-slider');
+		gallery.slider({
+			interval: 1000 //自动轮播周期，若为0则不自动播放，默认为0；
+		});
+
+		mui('.mui-scroll-wrapper').scroll({
+			deceleration: 0.0005 //flick 减速系数，系数越大，滚动速度越慢，滚动距离越小，默认值0.0006
+		});
+	</script>
 </body>
+
 </html>
