--- a/public/m/index.html
+++ b/public/m/index.html
@@ -104,22 +104,22 @@
 
 			<!-- 导航链接 -->
 			<div class="nav-link mui-clearfix">
-				<a href="#">
+				<a href="detail.html">
 					<img src="./images/nav1.png" alt="">
 				</a>
-				<a href="#">
+				<a href="detail.html">
 					<img src="./images/nav2.png" alt="">
 				</a>
-				<a href="#">
+				<a href="detail.html">
 					<img src="./images/nav3.png" alt="">
 				</a>
-				<a href="#">
+				<a href="detail.html">
 					<img src="./images/nav4.png" alt="">
 				</a>
-				<a href="#">
+				<a href="detail.html">
 					<img src="./images/nav5.png" alt="">
 				</a>
-				<a href="#">
+				<a href="detail.html">
 					<img src="./images/nav6.png" alt="">
 				</a>
 			</div>
